988
any chance of this bug getting some attention? there are a lot of ways to trigger this: see also SI-1195, SI-4171, plus this one (very similar to SI-4171) I found today:
```
scala> { class A; class B extends A; classOf[B] }
<console>:7: error: type mismatch;
 found   : java.lang.Class[B(in value res4)] where type B(in value res4) <: A with ScalaObject
 required: java.lang.Class[_ <: A with ScalaObject]
       val res4 =
           ^
```
